@@ -86,7 +86,7 @@ include_once('include/page_header.php');
 	}
 //--------
 
-/* FILTER */
+// FILTER 
 	if(isset($_REQUEST['filter_rst'])){
 		$_REQUEST['nav_time'] = time();
 		$_REQUEST['triggerid'] = 0;
@@ -143,6 +143,7 @@ include_once('include/page_header.php');
 //SDI($_REQUEST['groupid'].' : '.$_REQUEST['hostid']);
 		$params = array();
 		foreach($options as $option) $params[$option] = 1;
+
 		$PAGE_GROUPS = get_viewed_groups(PERM_READ_ONLY, $params);
 		$PAGE_HOSTS = get_viewed_hosts(PERM_READ_ONLY, $PAGE_GROUPS['selected'], $params);
 //SDI($_REQUEST['groupid'].' : '.$_REQUEST['hostid']);
@@ -379,7 +380,7 @@ include_once('include/page_header.php');
 				$event['duration'] = zbx_date2age($event['clock'],$next_event['clock']);
 			}
 
-			$event['value'] = new CCol(trigger_value2str($event['value']), get_trigger_value_style($event['value']));
+			$event['value_col'] = new CCol(trigger_value2str($event['value']), get_trigger_value_style($event['value']));
 
 			$events[$enum] = $event;
 		}
@@ -427,8 +428,8 @@ include_once('include/page_header.php');
 				is_show_all_nodes() ? get_node_name_by_elid($event['objectid']) : null,
 				$_REQUEST['hostid'] == 0 ? $host['host'] : null,
 				$tr_desc,
-				$event['value'],
-				new CCol(get_severity_description($trigger['priority']), get_severity_style($trigger['priority'],$trigger['value'])),
+				$event['value_col'],
+				new CCol(get_severity_description($trigger['priority']), get_severity_style($trigger['priority'],$event['value'])),
 				$event['duration'],
 				($config['event_ack_enable'])?$ack:NULL,
 				$actions
